layouts: list: Fix the card post alignment & apply new hero style

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+@font-face {
+    font-family: 'OldPuter';
+    src: url('../fonts/scientificaBold.ttf') format('truetype');
+}
+
 html {
     background-color: rgb(245, 250, 255)
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
+    font-family: 'Raleway', sans-serif;
 }
 
 header {
@@ -14,7 +20,7 @@ header {
 
 nav {
     font-family: 'Courier New', Courier, monospace;
-    background-color: #00508db6;
+    background-color: #00508dc7;
     backdrop-filter: blur(2px);
     transition: box-shadow 0.5s ease-in-out;
     position: fixed;
@@ -31,6 +37,7 @@ nav {
 nav .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 nav ul {
@@ -57,11 +64,11 @@ nav ul li {
 
 nav ul li[selected=true],
 nav ul li:hover {
-    border-bottom: 6px solid #184190;
+    border-bottom: 3px solid #00ff00;
 }
 
 nav ul li a {
-    color: #333;
+    color: #00ff00;
     text-decoration: none;
     transition: text-decoration 0.1s ease;
 }
@@ -74,31 +81,28 @@ nav ul li a {
 
 .github-icon .inline-icon svg {
     min-width: 20px;
-    color: #333;
+    color: #00ff00;
 }
 
 #hero {
     min-height: 300px;
-    background-color: #184190;
-    background-image:
-        radial-gradient(at 10% 60%, #5f59d5 0px, transparent 50%),
-        radial-gradient(at 90% 80%, #feb500 0px, transparent 50%),
-        radial-gradient(at 90% 10%, #ffffff 0px, transparent 50%);
+    background-color: #00508d;
     padding-top: 3rem;
     margin-bottom: 3rem;
-    margin-top: 1rem;
     color: #eee;
     font-family: 'Raleway', sans-serif;
     padding-bottom: 2rem;
 }
 
 #hero h1 {
+    font-family: 'OldPuter';
     font-size: 4rem;
     margin-bottom: 1rem;
 }
 
 #hero p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container {
@@ -120,9 +124,13 @@ select {
 
 #posts {
     margin: 2rem;
-    display: grid;
+    padding-top: 2.5rem;
+    display: flex;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: stretch;
 }
 
 #paginator {
@@ -134,14 +142,14 @@ select {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 40%;
+    max-width: 30%;
     min-width: 500px;
     margin: 1rem 0;
     background-color: #fff;
     position: relative;
-    top: -7rem;
+    top: -5rem;
     margin: 0 auto;
-    display: flex;
+    display: block;
 }
 
 #last-post img {
@@ -162,7 +170,7 @@ select {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 30%;
+    max-width: 40%;
     min-width: 300px;
     margin: 1rem 0;
     background-color: #fff;
@@ -183,6 +191,10 @@ select {
     margin-bottom: 1rem;
     font-size: 1.3rem;
     font-weight: bold;
+}
+
+.title-last-post {
+    font-size: 2.3rem;
 }
 
 .card-title a,
@@ -421,5 +433,15 @@ footer {
 
     #article-sidebar {
         display: none;
+    }
+}
+
+.blink {
+    animation: blink-animation 1s steps(1, end) infinite;
+}
+
+@keyframes blink-animation {
+    50% {
+        opacity: 0;
     }
 }
